11-kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wcg
  template:
    metadata:
      labels:
        app: wcg
    spec:
      imagePullSecrets:
        - name: github-pull-secret
      containers:
        - name: wcg
          image: ghcr.io/denqe/wcg:631c41a88442c790a79efd0d9913695cd8dd9b19
          imagePullPolicy: Always
          resources: {}
