11-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcg
spec:
  selector:
    app: wcg
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
