11-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: wcg
spec:
  rules:
  - host: wcg.local.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wcg
            port: 
              number: 8888
